--- a/argo-application/argo-application-sync-prod.yaml
+++ b/argo-application/argo-application-sync-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo
+  name: ethis-argo-prod
   namespace: argocd
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     path: manifest
   destination: 
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: ethis-prod
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
